--- a/app/views/app/app.html.erb
+++ b/app/views/app/app.html.erb
@@ -1,2 +1,2 @@
-<%= javascript_pack_tag 'app' %>
+<%= javascript_packs_with_chunks_tag 'app', 'application' %>
 <%= stylesheet_packs_with_chunks_tag 'app', 'application' %>
