--- a/app/views/app/app.html.erb
+++ b/app/views/app/app.html.erb
@@ -1,2 +1,2 @@
-<%= javascript_packs_with_chunks_tag 'app', 'application' %>
-<%= stylesheet_packs_with_chunks_tag 'app', 'application' %>
+<%= javascript_packs_with_chunks_tag 'app' %>
+<%= stylesheet_packs_with_chunks_tag 'app' %>
