Displays Tweet Image Preview When Selecting Image. Styling Changes

--- a/app/javascript/components/Dashboard/Dashboard.scss
+++ b/app/javascript/components/Dashboard/Dashboard.scss
@@ -48,4 +48,10 @@ body {
         background-color: #b7d9ec;
         padding: 10px 20px;
     }
+
+    .tweet-content img {
+        max-width: 100%;
+        margin-bottom: 5px;
+        margin-top: 10px;
+    }
 }
