private route working, signup -> login working

--- a/app/views/app/app.html.erb
+++ b/app/views/app/app.html.erb
@@ -1,2 +1,4 @@
+<div id="auth_data" data-auth="<%= @auth_data %>"></div>
+
 <%= javascript_pack_tag 'app' %>
 <%= stylesheet_packs_with_chunks_tag 'style', 'application' %>
